Neetcode All: Arrays & Hashing - 2, LC Practice

--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -6,16 +6,16 @@
    "id": "fa51d761",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:41.823990Z",
-     "iopub.status.busy": "2024-06-27T04:07:41.823822Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.157143Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.156646Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.341767Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.341368Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.678399Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.677915Z"
     },
     "papermill": {
-     "duration": 0.338749,
-     "end_time": "2024-06-27T04:07:42.158529",
+     "duration": 0.343004,
+     "end_time": "2024-06-29T11:06:13.679816",
      "exception": false,
-     "start_time": "2024-06-27T04:07:41.819780",
+     "start_time": "2024-06-29T11:06:13.336812",
      "status": "completed"
     },
     "tags": []
@@ -60,10 +60,10 @@
    "id": "db473660",
    "metadata": {
     "papermill": {
-     "duration": 0.002708,
-     "end_time": "2024-06-27T04:07:42.164284",
+     "duration": 0.002818,
+     "end_time": "2024-06-29T11:06:13.685768",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.161576",
+     "start_time": "2024-06-29T11:06:13.682950",
      "status": "completed"
     },
     "tags": []
@@ -78,17 +78,17 @@
    "id": "6e8896c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.170926Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.170362Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.177370Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.176844Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.692325Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.691826Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.698750Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.698325Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011555,
-     "end_time": "2024-06-27T04:07:42.178522",
+     "duration": 0.011353,
+     "end_time": "2024-06-29T11:06:13.699808",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.166967",
+     "start_time": "2024-06-29T11:06:13.688455",
      "status": "completed"
     },
     "tags": []
@@ -152,10 +152,10 @@
    "id": "de5b1765",
    "metadata": {
     "papermill": {
-     "duration": 0.00263,
-     "end_time": "2024-06-27T04:07:42.183840",
+     "duration": 0.002647,
+     "end_time": "2024-06-29T11:06:13.705165",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.181210",
+     "start_time": "2024-06-29T11:06:13.702518",
      "status": "completed"
     },
     "tags": []
@@ -170,17 +170,17 @@
    "id": "e736c8a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.190136Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.189734Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.194065Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.193548Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.711637Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.711246Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.715619Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.715186Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.008596,
-     "end_time": "2024-06-27T04:07:42.195098",
+     "duration": 0.008844,
+     "end_time": "2024-06-29T11:06:13.716704",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.186502",
+     "start_time": "2024-06-29T11:06:13.707860",
      "status": "completed"
     },
     "tags": []
@@ -223,10 +223,10 @@
    "id": "cd635853",
    "metadata": {
     "papermill": {
-     "duration": 0.002584,
-     "end_time": "2024-06-27T04:07:42.200330",
+     "duration": 0.002605,
+     "end_time": "2024-06-29T11:06:13.722017",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.197746",
+     "start_time": "2024-06-29T11:06:13.719412",
      "status": "completed"
     },
     "tags": []
@@ -241,17 +241,17 @@
    "id": "df35356a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.207430Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.206917Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.211712Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.211093Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.729249Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.728767Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.733253Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.732785Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.009301,
-     "end_time": "2024-06-27T04:07:42.213008",
+     "duration": 0.008834,
+     "end_time": "2024-06-29T11:06:13.734294",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.203707",
+     "start_time": "2024-06-29T11:06:13.725460",
      "status": "completed"
     },
     "tags": []
@@ -286,10 +286,10 @@
    "id": "80b62de1",
    "metadata": {
     "papermill": {
-     "duration": 0.010094,
-     "end_time": "2024-06-27T04:07:42.226987",
+     "duration": 0.002609,
+     "end_time": "2024-06-29T11:06:13.739598",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.216893",
+     "start_time": "2024-06-29T11:06:13.736989",
      "status": "completed"
     },
     "tags": []
@@ -305,17 +305,17 @@
    "id": "ec2db856",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.243573Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.243073Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.247925Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.247381Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.746034Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.745599Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.749814Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.749367Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.014135,
-     "end_time": "2024-06-27T04:07:42.249279",
+     "duration": 0.00852,
+     "end_time": "2024-06-29T11:06:13.750850",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.235144",
+     "start_time": "2024-06-29T11:06:13.742330",
      "status": "completed"
     },
     "tags": []
@@ -346,17 +346,17 @@
    "id": "46f751bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.275749Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.275268Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.281233Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.280656Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.757339Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.756931Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.762271Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.761825Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.029881,
-     "end_time": "2024-06-27T04:07:42.282558",
+     "duration": 0.009777,
+     "end_time": "2024-06-29T11:06:13.763331",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.252677",
+     "start_time": "2024-06-29T11:06:13.753554",
      "status": "completed"
     },
     "tags": []
@@ -395,17 +395,17 @@
    "id": "06c17597",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.291914Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.291545Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.297121Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.296664Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.769761Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.769344Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.774377Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.773952Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011626,
-     "end_time": "2024-06-27T04:07:42.298141",
+     "duration": 0.009309,
+     "end_time": "2024-06-29T11:06:13.775401",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.286515",
+     "start_time": "2024-06-29T11:06:13.766092",
      "status": "completed"
     },
     "tags": []
@@ -439,17 +439,17 @@
    "id": "602ae596",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.305673Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.305255Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.310125Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.309578Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.781755Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.781346Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.786058Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.785615Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.009357,
-     "end_time": "2024-06-27T04:07:42.311234",
+     "duration": 0.008933,
+     "end_time": "2024-06-29T11:06:13.787073",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.301877",
+     "start_time": "2024-06-29T11:06:13.778140",
      "status": "completed"
     },
     "tags": []
@@ -489,17 +489,17 @@
    "id": "f1e64142",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.317522Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.317272Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.321878Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.321367Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.793639Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.793261Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.797875Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.797344Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.0091,
-     "end_time": "2024-06-27T04:07:42.323119",
+     "duration": 0.009116,
+     "end_time": "2024-06-29T11:06:13.799062",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.314019",
+     "start_time": "2024-06-29T11:06:13.789946",
      "status": "completed"
     },
     "tags": []
@@ -533,10 +533,10 @@
    "id": "79053be1",
    "metadata": {
     "papermill": {
-     "duration": 0.00432,
-     "end_time": "2024-06-27T04:07:42.330868",
+     "duration": 0.00265,
+     "end_time": "2024-06-29T11:06:13.804417",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.326548",
+     "start_time": "2024-06-29T11:06:13.801767",
      "status": "completed"
     },
     "tags": []
@@ -551,17 +551,17 @@
    "id": "2e438aa0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.341737Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.341180Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.347230Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.346733Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.810714Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.810305Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.814996Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.814485Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.012726,
-     "end_time": "2024-06-27T04:07:42.348378",
+     "duration": 0.008943,
+     "end_time": "2024-06-29T11:06:13.816048",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.335652",
+     "start_time": "2024-06-29T11:06:13.807105",
      "status": "completed"
     },
     "tags": []
@@ -602,10 +602,10 @@
    "id": "6afba366",
    "metadata": {
     "papermill": {
-     "duration": 0.026484,
-     "end_time": "2024-06-27T04:07:42.377796",
+     "duration": 0.002696,
+     "end_time": "2024-06-29T11:06:13.821560",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.351312",
+     "start_time": "2024-06-29T11:06:13.818864",
      "status": "completed"
     },
     "tags": []
@@ -620,17 +620,17 @@
    "id": "47bab318",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.393652Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.393329Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.400756Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.399385Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.828047Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.827555Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.833479Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.833018Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.013797,
-     "end_time": "2024-06-27T04:07:42.402171",
+     "duration": 0.010259,
+     "end_time": "2024-06-29T11:06:13.834492",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.388374",
+     "start_time": "2024-06-29T11:06:13.824233",
      "status": "completed"
     },
     "tags": []
@@ -685,10 +685,10 @@
    "id": "304faf22",
    "metadata": {
     "papermill": {
-     "duration": 0.004755,
-     "end_time": "2024-06-27T04:07:42.411473",
+     "duration": 0.002718,
+     "end_time": "2024-06-29T11:06:13.840015",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.406718",
+     "start_time": "2024-06-29T11:06:13.837297",
      "status": "completed"
     },
     "tags": []
@@ -703,17 +703,17 @@
    "id": "0ac43f3b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.420754Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.420308Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.425456Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.424918Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.846502Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.846106Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.850123Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.849685Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011119,
-     "end_time": "2024-06-27T04:07:42.426526",
+     "duration": 0.008278,
+     "end_time": "2024-06-29T11:06:13.851108",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.415407",
+     "start_time": "2024-06-29T11:06:13.842830",
      "status": "completed"
     },
     "tags": []
@@ -741,17 +741,17 @@
    "id": "b278e908",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.442880Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.442460Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.448234Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.447726Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.857632Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.857295Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.862678Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.862207Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.019957,
-     "end_time": "2024-06-27T04:07:42.449402",
+     "duration": 0.009845,
+     "end_time": "2024-06-29T11:06:13.863805",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.429445",
+     "start_time": "2024-06-29T11:06:13.853960",
      "status": "completed"
     },
     "tags": []
@@ -785,10 +785,10 @@
    "id": "b3ac55c5",
    "metadata": {
     "papermill": {
-     "duration": 0.002629,
-     "end_time": "2024-06-27T04:07:42.454779",
+     "duration": 0.00273,
+     "end_time": "2024-06-29T11:06:13.869319",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.452150",
+     "start_time": "2024-06-29T11:06:13.866589",
      "status": "completed"
     },
     "tags": []
@@ -803,16 +803,17 @@
    "id": "05c610bc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-27T04:07:42.461144Z",
-     "iopub.status.busy": "2024-06-27T04:07:42.460738Z",
-     "iopub.status.idle": "2024-06-27T04:07:42.465340Z",
-     "shell.execute_reply": "2024-06-27T04:07:42.464833Z"
+     "iopub.execute_input": "2024-06-29T11:06:13.875851Z",
+     "iopub.status.busy": "2024-06-29T11:06:13.875475Z",
+     "iopub.status.idle": "2024-06-29T11:06:13.880085Z",
+     "shell.execute_reply": "2024-06-29T11:06:13.879648Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.008777,
-     "end_time": "2024-06-27T04:07:42.466338",
+     "duration": 0.00907,
+     "end_time": "2024-06-29T11:06:13.881146",
      "exception": false,
-     "start_time": "2024-06-27T04:07:42.457561",
+     "start_time": "2024-06-29T11:06:13.872076",
      "status": "completed"
     },
     "tags": []
@@ -830,6 +831,47 @@
     "assert checkArraySortedAndRotated([3,4,5,1,2]) == True\n",
     "assert checkArraySortedAndRotated([2,1,3,4]) == False\n",
     "assert checkArraySortedAndRotated([3,2,1]) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d033d8f",
+   "metadata": {},
+   "source": [
+    "All ancestors of a node in a DAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50e7e595",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/all-ancestors-of-a-node-in-a-directed-acyclic-graph/submissions/1304043339\n",
+    "def getAncestors(N: int, edges: list[list[int]]) -> list[list[int]]:\n",
+    "    @functools.cache\n",
+    "    def DFS(n: int) -> set[int]:\n",
+    "        ancestors: set[int] = set()\n",
+    "        for next_ in adjl[n]:\n",
+    "            ancestors.add(next_)\n",
+    "            for next_ancestor in DFS(next_):\n",
+    "                ancestors.add(next_ancestor)\n",
+    "        return ancestors\n",
+    "\n",
+    "    adjl: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
+    "    for n1, n2 in edges:\n",
+    "        adjl[n2].append(n1)\n",
+    "\n",
+    "    result: list[list[int]] = [[] for _ in range(N)]\n",
+    "    for i in range(N):\n",
+    "        result[i] = sorted(DFS(i))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert getAncestors(8, [[0,3],[0,4],[1,3],[2,4],[2,7],[3,5],[3,6],[3,7],[4,6]]) == [[],[],[],[0,1],[0,2],[0,1,3],[0,1,2,3,4],[0,1,2,3]]\n",
+    "assert getAncestors(5, [[0,1],[0,2],[0,3],[0,4],[1,2],[1,3],[1,4],[2,3],[2,4],[3,4]]) == [[],[0],[0,1],[0,1,2],[0,1,2,3]]"
    ]
   }
  ],
@@ -853,14 +895,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 1.983939,
-   "end_time": "2024-06-27T04:07:42.683969",
+   "duration": 1.892594,
+   "end_time": "2024-06-29T11:06:14.100268",
    "environment_variables": {},
    "exception": null,
    "input_path": "practice/005.ipynb",
    "output_path": "practice/005.ipynb",
    "parameters": {},
-   "start_time": "2024-06-27T04:07:40.700030",
+   "start_time": "2024-06-29T11:06:12.207674",
    "version": "2.6.0"
   }
  },
