--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -861,6 +861,7 @@
      "iopub.status.idle": "2024-06-29T17:24:21.277996Z",
      "shell.execute_reply": "2024-06-29T17:24:21.277586Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011042,
      "end_time": "2024-06-29T17:24:21.278990",
@@ -896,6 +897,89 @@
     "# Testing the solution\n",
     "assert getAncestors(8, [[0,3],[0,4],[1,3],[2,4],[2,7],[3,5],[3,6],[3,7],[4,6]]) == [[],[],[],[0,1],[0,2],[0,1,3],[0,1,2,3,4],[0,1,2,3]]\n",
     "assert getAncestors(5, [[0,1],[0,2],[0,3],[0,4],[1,2],[1,3],[1,4],[2,3],[2,4],[3,4]]) == [[],[0],[0,1],[0,1,2],[0,1,2,3]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fb25f1d",
+   "metadata": {},
+   "source": [
+    "LC Contest: 30th June 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cc84226",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "def maxHeightOfTriangle(red: int, blue: int) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int) -> tuple[int, int]:\n",
+    "        if i == 0:\n",
+    "            return 0, 0\n",
+    "        else:\n",
+    "            prev = backtrack(i - 1)\n",
+    "            if i % 2 == 0:\n",
+    "                return prev[0], prev[1] + i\n",
+    "            else:\n",
+    "                return prev[0] + i, prev[1]\n",
+    "\n",
+    "    red, blue = sorted([red, blue])\n",
+    "    low, high = 1, 20\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        r, b = sorted(backtrack(mid))\n",
+    "        if r <= red and b <= blue:\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return high\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxHeightOfTriangle(10, 1) == 2\n",
+    "assert maxHeightOfTriangle(1, 1) == 1\n",
+    "assert maxHeightOfTriangle(2, 1) == 2\n",
+    "assert maxHeightOfTriangle(2, 4) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3acecb65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2\n",
+    "def maximumLength(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Either all consequetive element pairs should sum up to an even number or to an odd number\n",
+    "\n",
+    "    If all elements are to sum to an even number: either all should be even or all numbers should be odd => max(odd_count, even_count)\n",
+    "    If all elements are to sum to an odd number: greedily check validity (consequetive elements should be odd-even or even-odd)\n",
+    "    \"\"\"\n",
+    "    odd_sum_length = odd_count = even_count = 0\n",
+    "    prev = 0 if nums[0] % 2 else 1\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] % 2 == 0:\n",
+    "            even_count += 1\n",
+    "        else:\n",
+    "            odd_count += 1\n",
+    "\n",
+    "        if nums[i] % 2 != prev:\n",
+    "            odd_sum_length, prev = odd_sum_length + 1, nums[i] % 2\n",
+    "\n",
+    "    return max(odd_sum_length, odd_count, even_count)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumLength([1,2,3,4]) == 4\n",
+    "assert maximumLength([1,2,1,1,2,1,2]) == 6\n",
+    "assert maximumLength([1,3]) == 2"
    ]
   }
  ],
