--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -1835,6 +1835,7 @@
      "iopub.status.idle": "2024-07-01T16:00:11.417548Z",
      "shell.execute_reply": "2024-07-01T16:00:11.417048Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011161,
      "end_time": "2024-07-01T16:00:11.418639",
@@ -1866,6 +1867,293 @@
     "\n",
     "# Testing the solution\n",
     "p16(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9432d4b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def p17(N: int) -> None:\n",
+    "    max_width = (2 * N) - 1\n",
+    "    for i in range(1, N + 1):\n",
+    "        width = (2 * i) - 1\n",
+    "        spaces = max_width - width\n",
+    "        for j in range(spaces // 2):\n",
+    "            print(\" \", end=\"\")\n",
+    "        for j in range(i):\n",
+    "            print(chr(ord('A') + j), end=\"\")\n",
+    "        for j in range(i - 2, -1, -1):\n",
+    "            print(chr(ord('A') + j), end=\"\")\n",
+    "        for j in range(spaces // 2):\n",
+    "            print(\" \", end=\"\")\n",
+    "        print()\n",
+    "\n",
+    "# Testing the solution\n",
+    "p17(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4633133c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def p18(N: int) -> None:\n",
+    "    for i in range(1, N + 1):\n",
+    "        for j in range(N - i, N):\n",
+    "            print(chr(ord('A') + j), end=' ')\n",
+    "        print()\n",
+    "\n",
+    "# Testing the solution\n",
+    "p18(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45cf811d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def p19(N: int) -> None:\n",
+    "    max_width = 2 * N\n",
+    "    for i_ in range(2 * N):\n",
+    "        i = N - i_ if i_ < N else (i_ % N) + 1\n",
+    "        for j in range(i):\n",
+    "            print(\"*\", end='')\n",
+    "        for j in range(max_width - (2 * i)):\n",
+    "            print(\" \", end='')\n",
+    "        for j in range(i):\n",
+    "            print(\"*\", end='')\n",
+    "        print()\n",
+    "\n",
+    "# Testing the solution\n",
+    "p19(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da170774",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def p20(N: int) -> None:\n",
+    "    max_width = 2 * N\n",
+    "    for i_ in range(2 * N - 1):\n",
+    "        i = i_ + 1 if i_ < N else 2 * N - i_ - 1\n",
+    "        for j in range(i):\n",
+    "            print(\"*\", end='')\n",
+    "        for j in range(max_width - 2 * i):\n",
+    "            print(\" \", end='')\n",
+    "        for j in range(i):\n",
+    "            print(\"*\", end='')\n",
+    "        print()\n",
+    "\n",
+    "# Testing the solution\n",
+    "p20(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9ec1076",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def p21(N: int) -> None:\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            print(\"*\" if i in (0, N - 1) or j in (0, N - 1) else \" \", end='')\n",
+    "        print()\n",
+    "\n",
+    "# Testing the solution\n",
+    "p21(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "519e516c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def p22(N: int) -> None:\n",
+    "    result: collections.deque[collections.deque[int]] = collections.deque([collections.deque([1])])\n",
+    "    for i in range(2, N + 1):\n",
+    "        for row in result:\n",
+    "            row.appendleft(i)\n",
+    "            row.append(i)\n",
+    "        result.appendleft(collections.deque([i for _ in range(2 * i - 1)]))\n",
+    "        result.append(collections.deque([i for _ in range(2 * i - 1)]))\n",
+    "\n",
+    "    for row in result:\n",
+    "        for col in row:\n",
+    "            print(col, end=' ')\n",
+    "        print()\n",
+    "\n",
+    "# Testing the solution\n",
+    "p22(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cdce5e5",
+   "metadata": {},
+   "source": [
+    "Basic Math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd23fa37",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def reverseDigits(N: int) -> int:\n",
+    "    NR, num = 0, abs(N)\n",
+    "    while num > 0:\n",
+    "        digit, num = num % 10, num // 10\n",
+    "        NR = (NR * 10) + digit\n",
+    "    return NR if N > 0 else -NR\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert reverseDigits(-123) == -321"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d9d6817",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isPalindrome(N: int) -> bool:\n",
+    "    def reverse(num: int) -> int:\n",
+    "        numR = 0\n",
+    "        while num > 0:\n",
+    "            digit, num = num % 10, num // 10\n",
+    "            numR = (numR * 10) + digit\n",
+    "        return numR\n",
+    "\n",
+    "    return N >= 0 and N == reverse(N)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isPalindrome(121) == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "787f4139",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "source": [
+    "def lcmAndGcd(n1: int , n2: int) -> tuple[int, int]:\n",
+    "    def primeFactors(n: int) -> dict[int, int]:\n",
+    "        factors: collections.defaultdict[int, int] = collections.defaultdict(int)\n",
+    "        curr = 2\n",
+    "        while curr <= n:\n",
+    "            if n % curr == 0:\n",
+    "                n //= curr\n",
+    "                factors[curr] += 1\n",
+    "            else:\n",
+    "                curr += 1\n",
+    "        return factors\n",
+    "\n",
+    "    pf1, pf2 = primeFactors(n1), primeFactors(n2)\n",
+    "    factors: set[int] = {*pf1.keys(), *pf2.keys()}\n",
+    "    lcm = gcd = 1\n",
+    "    for factor in factors:\n",
+    "        min_, max_ = min(pf1[factor], pf2[factor]), max(pf1[factor], pf2[factor])\n",
+    "        if min_ != 0:\n",
+    "            gcd *= factor ** min_\n",
+    "        if max_ != 0:\n",
+    "            lcm *= factor ** max_\n",
+    "\n",
+    "    return lcm, gcd\n",
+    "\n",
+    "Testing the solution\n",
+    "assert lcmAndGcd(5, 10) == (10, 5)\n",
+    "assert lcmAndGcd(14, 8) == (56, 2)\n",
+    "assert lcmAndGcd(8, 42) == (168, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf026496",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def lcmAndGcdOptimal(n1: int , n2: int) -> tuple[int, int]:\n",
+    "    \"\"\"\n",
+    "    Euclidean algo: GCD remains same even if greater of two numbers is subtracted with the smaller number\n",
+    "    Continously subtract greater by smaller until we get a 0.\n",
+    "    \"\"\"\n",
+    "    def gcd(n1: int, n2: int) -> int:\n",
+    "        while n1 != 0 and n2 != 0:\n",
+    "            n1, n2 = sorted([n1, n2])\n",
+    "            n1, n2 = n1, n2 - n1\n",
+    "        return max(n1, n2)\n",
+    "\n",
+    "    gcd_ = gcd(n1, n2)\n",
+    "    lcm_ = (n1 * n2) // gcd_\n",
+    "    return lcm_, gcd_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert lcmAndGcdOptimal(5, 10) == (10, 5)\n",
+    "assert lcmAndGcdOptimal(14, 8) == (56, 2)\n",
+    "assert lcmAndGcdOptimal(8, 42) == (168, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6aa105e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def armstrong(N: int) -> bool:\n",
+    "    def countDigits(n: int) -> int:\n",
+    "        digits = 0\n",
+    "        while n > 0:\n",
+    "            digits, n = digits + 1, n // 10\n",
+    "        return digits\n",
+    "\n",
+    "    total, n, K = 0, N, countDigits(N)\n",
+    "    while n > 0:\n",
+    "        digit, n = n % 10, n // 10\n",
+    "        total +=digit ** K\n",
+    "\n",
+    "    return total == N\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert armstrong(371) == True\n",
+    "assert armstrong(123) == False"
    ]
   }
  ],
