--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -2269,7 +2269,6 @@
    "cell_type": "markdown",
    "id": "787f4139",
    "metadata": {
-    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.007503,
      "end_time": "2024-07-02T15:27:07.476278",
@@ -2365,6 +2364,7 @@
      "iopub.status.idle": "2024-07-02T15:27:07.517633Z",
      "shell.execute_reply": "2024-07-02T15:27:07.517062Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.013268,
      "end_time": "2024-07-02T15:27:07.518636",
@@ -2393,6 +2393,62 @@
     "# Testing the solution\n",
     "assert armstrong(371) == True\n",
     "assert armstrong(123) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa26b4c6",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def printAllDivisors(N: int) -> list[int]:\n",
+    "    result: set[int] = set()\n",
+    "    i = 1\n",
+    "    while i * i <= N:\n",
+    "        if N % i == 0:\n",
+    "            result.add(i)\n",
+    "            result.add(N // i)\n",
+    "        i += 1\n",
+    "\n",
+    "    return sorted(result)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert printAllDivisors(12) == [1, 2, 3, 4, 6, 12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8135fe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minJumps(arr: list[int], N: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Greedy Approach = Time: O(N), Space: O(1)\n",
+    "\n",
+    "    Keep track of the range we can jump into with minimum number of steps\n",
+    "    For jump = 0, we can jump to index = 0 (left = right = 0)\n",
+    "\n",
+    "    For each iteration through range, compute maximum range we can jump into.\n",
+    "    As we move with the next iteration, jumps = jumps + 1.\n",
+    "    Again recompute the next range\n",
+    "    \"\"\"\n",
+    "    jumps = left = right = 0\n",
+    "    while right < N - 1:\n",
+    "        max_idx = 0\n",
+    "        for i in range(left, right + 1):\n",
+    "            max_idx = max(max_idx, i + arr[i])\n",
+    "        # For next iteration, we start with where we left off in the previous range (right + 1)\n",
+    "        jumps, left, right = jumps + 1, right + 1, max_idx\n",
+    "\n",
+    "    return jumps\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minJumps([1,3,5,8,9,2,6,7,6,8,9], 11) == 3"
    ]
   }
  ],
