--- a/practice/005.ipynb
+++ b/practice/005.ipynb
@@ -3150,6 +3150,7 @@
      "iopub.status.idle": "2024-07-05T15:02:30.225709Z",
      "shell.execute_reply": "2024-07-05T15:02:30.225268Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016875,
      "end_time": "2024-07-05T15:02:30.226763",
@@ -3162,6 +3163,10 @@
    "outputs": [],
    "source": [
     "def msort(arr: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Divide and merge\n",
+    "    Best, Avg, Worst: O(n log n)\n",
+    "    \"\"\"\n",
     "    def merge(arr1: list[int], arr2: list[int]) -> list[int]:\n",
     "        N1, N2, i, j = len(arr1), len(arr2), 0, 0\n",
     "        result: list[int] = []\n",
@@ -3188,6 +3193,368 @@
     "assert msort([5,4,3,2,1]) == [1,2,3,4,5]\n",
     "assert msort([2,1]) == [1,2]\n",
     "assert msort([1]) == [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64ad8a6d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def msortBetter(arr: list[int]) -> list[int]:\n",
+    "    def backtrack(left: int, right: int) -> None:\n",
+    "        if right - left <= 1:\n",
+    "            return\n",
+    "        else:\n",
+    "            mid = (left + right) // 2\n",
+    "            backtrack(left, mid)\n",
+    "            backtrack(mid, right)\n",
+    "\n",
+    "            temp: list[int] = []\n",
+    "            i, j = left, mid\n",
+    "            while i < mid or j < right:\n",
+    "                if j >= right or (i < mid and arr[i] <= arr[j]):\n",
+    "                    temp.append(arr[i])\n",
+    "                    i += 1\n",
+    "                else:\n",
+    "                    temp.append(arr[j])\n",
+    "                    j += 1\n",
+    "\n",
+    "            for idx in range(left, right):\n",
+    "                arr[idx] = temp[idx - left]\n",
+    "\n",
+    "    N = len(arr)\n",
+    "    backtrack(0, N)\n",
+    "    return arr\n",
+    "\n",
+    "# Testing the solution\n",
+    "for _ in range(50):\n",
+    "    arr = np.random.randint(0, 50, random.randint(1, 51)).tolist()\n",
+    "    msortBetter(arr)\n",
+    "    assert arr == sorted(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d01399f4",
+   "metadata": {},
+   "source": [
+    "Quick Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b24de28",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def qsort(arr: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Pick a pivot and place it at its correct position - smaller elements to the left, larger elements to the right of pivot\n",
+    "    Sort left & right halves recusively\n",
+    "    \"\"\"\n",
+    "    N = len(arr)\n",
+    "    if N <= 1:\n",
+    "        return arr\n",
+    "    else:\n",
+    "        left, right, pivot = [], [], 0\n",
+    "        for i in range(N):\n",
+    "            if i != pivot:\n",
+    "                if arr[i] <= arr[pivot]:\n",
+    "                    left.append(arr[i])\n",
+    "                else:\n",
+    "                    right.append(arr[i])\n",
+    "\n",
+    "        return qsort(left) + [arr[pivot]] + qsort(right)\n",
+    "\n",
+    "# Testing the solution\n",
+    "for _ in range(50):\n",
+    "    arr = np.random.randint(0, 50, random.randint(1, 51)).tolist()\n",
+    "    assert qsort(arr) == sorted(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5849396",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def qsortBetter(arr: list[int]) -> list[int]:\n",
+    "    def partition(left: int, right: int, pivot: int) -> int:\n",
+    "        \"\"\"\n",
+    "        Place two pointers, i = left, j = right\n",
+    "        Iterate i forward until we hit a number greater than arr[pivot]\n",
+    "        Iterate j backward until we hit a number lesser than or equal to arr[pivot]\n",
+    "        if i < j:\n",
+    "            Swap arr[i], arr[j]\n",
+    "        else:\n",
+    "            swap arr[pivot], arr[j]\n",
+    "            return j\n",
+    "        \"\"\"\n",
+    "        i, j = left, right\n",
+    "        while i < j:\n",
+    "            while i < right and arr[i] <= arr[pivot]:\n",
+    "                i += 1\n",
+    "            while j > left and arr[j] > arr[pivot]:\n",
+    "                j -= 1\n",
+    "            if i < j:\n",
+    "                arr[i], arr[j] = arr[j], arr[i]\n",
+    "\n",
+    "        arr[pivot], arr[j] = arr[j], arr[pivot]\n",
+    "        return j\n",
+    "\n",
+    "    def backtrack(left: int, right: int) -> None:\n",
+    "        if left < right:\n",
+    "            pivot = partition(left, right, left)\n",
+    "            backtrack(left, pivot - 1)\n",
+    "            backtrack(pivot + 1, right)\n",
+    "\n",
+    "    N = len(arr)\n",
+    "    backtrack(0, N - 1)\n",
+    "    return arr\n",
+    "\n",
+    "# Testing the solution\n",
+    "for _ in range(50):\n",
+    "    arr = np.random.randint(0, 50, random.randint(1, 51)).tolist()\n",
+    "    qsortBetter(arr)\n",
+    "    assert arr == sorted(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d24ea52",
+   "metadata": {},
+   "source": [
+    "LC POTD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8d69999",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/pass-the-pillow/submissions/1311515636\n",
+    "def passThePillow(n: int, time: int) -> int:\n",
+    "    atFirst = (time // (n - 1)) % 2 == 0\n",
+    "    position = time % (n - 1)\n",
+    "    return position + 1 if atFirst else n - position\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert passThePillow(4, 5) == 2\n",
+    "assert passThePillow(3, 2) == 3\n",
+    "assert passThePillow(6, 5) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be0a407e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def intersect(nums1: list[int], nums2: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    Taking this approach since in one of the follow ups, its mentioned that the array is sorted\n",
+    "    \"\"\"\n",
+    "    # Sort both the arrays\n",
+    "    nums1.sort()\n",
+    "    nums2.sort()\n",
+    "\n",
+    "    N1, N2, i, j = len(nums1), len(nums2), 0, 0\n",
+    "    intersection: list[int] = []\n",
+    "    while i < N1 and j < N2:\n",
+    "        if nums1[i] < nums2[j]:\n",
+    "            i += 1\n",
+    "        elif nums1[i] > nums2[j]:\n",
+    "            j += 1\n",
+    "        else:\n",
+    "            intersection.append(nums1[i])\n",
+    "            i, j = i + 1, j + 1\n",
+    "\n",
+    "    return intersection\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert intersect([1,2,2,1], [2,2]) == [2,2]\n",
+    "assert intersect([4,9,5], [9,4,9,8,4]) == [4,9]\n",
+    "assert intersect([4,9,5,4], [9,4,9,8,4]) == [4,4,9]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9ce06ce",
+   "metadata": {},
+   "source": [
+    "Codeforces Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd52ba67",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Drinks 800\n",
+    "def drinks(proportions: list[int], n_drinks: int) -> float:\n",
+    "    return (sum(proportions) * 100) / (100 * n_drinks)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert round(drinks([50,50,100], 3), 2) == 66.67\n",
+    "assert round(drinks([0,25,50,75], 4), 2) == 37.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b793f455",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Substring and subsequence - 1200 \n",
+    "def substr_subsequence(text1: str, text2: str) -> int:\n",
+    "    N1, N2 = len(text1), len(text2)\n",
+    "    ans: int = N1 + N2\n",
+    "    for k in range(N2):\n",
+    "        i, j = 0, k\n",
+    "        while i < N1 and j < N2:\n",
+    "            if text1[i] == text2[j]:\n",
+    "                j += 1\n",
+    "            i += 1\n",
+    "        ans = min(ans, N1 + N2 - (j - k))\n",
+    "\n",
+    "    return ans\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert substr_subsequence(\"aba\", \"cb\") == 4\n",
+    "assert substr_subsequence(\"contest\", \"test\") == 7\n",
+    "assert substr_subsequence(\"cde\", \"abcefg\") == 7\n",
+    "assert substr_subsequence(\"cdaa\", \"cdca\") == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b864bd53",
+   "metadata": {},
+   "source": [
+    "LC Biweekly - 6th July, started at 9 PM IST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dd8e45d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "def numberOfAlternatingGroups(colors: list[int]) -> int:\n",
+    "    N = len(colors)\n",
+    "    colors += colors[:2]\n",
+    "    groups = 0\n",
+    "    for i in range(N):\n",
+    "        if colors[i + 2] == colors[i] and colors[i] != colors[i + 1]:\n",
+    "            groups += 1\n",
+    "    return groups\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfAlternatingGroups([0,1,0,0,1]) == 3\n",
+    "assert numberOfAlternatingGroups([1,1,0]) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7701afcb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2\n",
+    "def maximumPoints(enemyEnergies: list[int], currentEnergy: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Sort by enemy energies.\n",
+    "    We can only consume energy once from an enemy - we do this from the most 'expensive' enemy\n",
+    "    We continue gaining points from the weaker guy\n",
+    "    \"\"\"\n",
+    "\n",
+    "    enemyEnergies.sort()\n",
+    "    N = len(enemyEnergies)\n",
+    "    points = 0\n",
+    "    while enemyEnergies:\n",
+    "        if enemyEnergies[0] <= currentEnergy:\n",
+    "            currentEnergy, points = currentEnergy % enemyEnergies[0], points + (currentEnergy // enemyEnergies[0])\n",
+    "        elif points > 0:\n",
+    "            currentEnergy += enemyEnergies.pop()\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    return points\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumPoints([3,2,2], 2) == 3\n",
+    "assert maximumPoints([2], 10) == 5\n",
+    "assert maximumPoints([2], 1) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7002f9b",
+   "metadata": {},
+   "source": [
+    "Upsolving Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ac42c70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3\n",
+    "# https://leetcode.com/problems/alternating-groups-ii/submissions/1311884953\n",
+    "def numberOfAlternatingGroupsII(colors: list[int], k: int) -> int:\n",
+    "    colors += colors[:k - 1]\n",
+    "    N = len(colors)\n",
+    "    i, j, prev, groups = 0, 0, int(not colors[0]), 0\n",
+    "    while j < N:\n",
+    "        if colors[j] != prev:\n",
+    "            prev = int(colors[j])\n",
+    "        else:\n",
+    "            i = j\n",
+    "        if j - i + 1 >= k:\n",
+    "            groups += 1\n",
+    "\n",
+    "        j += 1\n",
+    "\n",
+    "    return groups\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numberOfAlternatingGroupsII([0,1,0,0,1,0,1], 6) == 2\n",
+    "assert numberOfAlternatingGroupsII([1,1,0,1], 4) == 0\n",
+    "assert numberOfAlternatingGroupsII([0,1,0,1,0], 3) == 3"
    ]
   }
  ],
